Fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,11 @@ strong{
 	font-family: TsukuMinPr6-D;
 }
 
+.top-slide-container{
+	height: 100%;
+	overflow: hidden;
+}
+
 .top-slide1.slideInDown{
 	animation-delay: 0.3s;
 	animation-duration: 0.7s;
